@@ -2,9 +2,14 @@
 # + = přidán soubor
 # - = odebrán soubor
 # ~ = změněn soubor (ALT+SHIFT+;)
-# : = popis změn  (ALT+SHIFT+;)
+# : = popis změn
 # * = autor
 # /* = změněny všechny soubory v adresáři !!!
+
+07. 03. 2020
+* Kořen
+~ *
+: Všechno.
 
 15. 07. 2009 10:50
 * Kořen
@@ -44,7 +49,7 @@
 ~ pages/uvod.page.php
 ~ pages/poradane.page.php
 ~ pages/poradane/9-odkaz-mlhy.page.php
--:přesunut do svetu:pages/poradane/poslove-baroneta-z-lazovic.page.php + img/fotky/001-018.jpg
+: přesunut do svetu:pages/poradane/poslove-baroneta-z-lazovic.page.php + img/fotky/001-018.jpg
 
 30. 9. 2009 18:02
 * Kořen
